[package]
name = "expunge"
version = "0.1.0"
edition = "2021"
description.workspace = true
keywords.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expunge_derive = { version = "0.1.0", path = "../expunge_derive" }
zeroize = { version = "1.7.0", optional = true }
secrecy = { version = "0.8.0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
expunge_derive = { path = "../expunge_derive", features = ["all"] }
sha256 = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
all = ["zeroize"]
zeroize = ["dep:zeroize", "dep:secrecy"]
serde = ["dep:serde"]
