[package]
name = "expunge"
version = "0.1.1"
edition = "2021"
description.workspace = true
keywords.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expunge_derive = { version = "0.1.0", path = "../expunge_derive" }
zeroize = { version = "1.7.0", optional = true }
secrecy = { version = "0.8.0", optional = true }
serde = { version = "1.0", optional = true }
slog_derive = { version = "0.2.0", optional = true }
slog = { version = "2.7.0", optional = true, features = ["nested-values"] }
erased-serde = { version = "0.3", optional = true }
tempdir = "0.3.7"
tempfile = "3.9.0"

[dev-dependencies]
expunge_derive = { path = "../expunge_derive", features = ["all"] }
sha256 = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog_derive = "0.2.0"
slog = { version = "2.7.0", features = ["nested-values"] }
erased-serde = "0.3"
slog-term = "2.9"
slog-json = { version = "2.6", features = ["nested-values"] }
bytes = "1.5.0"

[features]
default = []
all = ["zeroize"]
zeroize = ["dep:zeroize", "dep:secrecy"]
serde = ["dep:serde"]
slog = ["dep:slog_derive", "dep:slog", "dep:erased-serde", "dep:serde"]
