[package]
name = "expunge_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
zeroize = { version = "1.7.0", optional = true }

[lib]
proc-macro = true

[features]
default = []
all = ["zeroize"]
zeroize = ["dep:zeroize"]
